steal this maze journal update

--- a/journal.html
+++ b/journal.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,20 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GMEPGCL87X"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-GMEPGCL87X');
     </script>
 </head>
+
 <body>
     <header>
-        <a href="index.html" class="back-button"><div class="bl"><div class="bl2">𒉶</div></div></a>
+        <a href="index.html" class="back-button">
+            <div class="bl">
+                <div class="bl2">𒉶</div>
+            </div>
+        </a>
         <div class="header-group">
             <img src="img/icons/pencil.gif" alt="" class="desktop-icon di0">
             <h1>Journal Entries </h1>
@@ -26,26 +32,40 @@
     <main>
         <div class="journal-content">
             <div class="journal-entry">
+                <div class="caption">(April 12 2025 22:55 CST)</div>
+                <h2>Watch <b>Steal This Maze</b> get made</h2>
+                <p>
+                    Hiya jerks! Mediocre here. Dar¥l just dropped a YT vid where he makes his newest piece, "Steal This
+                    Maze". Check it out
+                </p>
+                <iframe width="640" height="480" src="https://www.youtube.com/embed/Klm1r0J9OOM"
+                    title="Entire -aMAZEking(.com)- Process of Hand Drawing &quot;Steal This Maze!!!&quot;"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <hr />
+            </div>
+            <div class="journal-entry">
                 <div class="caption">(April 5 2024 21:10 CST)</div>
                 <h2>Sixth thing 3rd for me! entry -¥-</h2>
                 <p>
-                   Hey, I'm getting help so that I can write whatever the hell I want, 
-                   and it'll let me do that so I can say hello like, THIS!
+                    Hey, I'm getting help so that I can write whatever the hell I want,
+                    and it'll let me do that so I can say hello like, THIS!
                 </p>
                 </p>
-                   I intend to get to many things, but on April 27th (my favorite number) 
-                   I am at an art show here in beautiful Austin, Texas!
-                   It's the 16th annual Sunset Valley Art Festival!
-                   I will find the address. Hang on, 
+                I intend to get to many things, but on April 27th (my favorite number)
+                I am at an art show here in beautiful Austin, Texas!
+                It's the 16th annual Sunset Valley Art Festival!
+                I will find the address. Hang on,
                 </p>
                 <a href="https://www.sunsetvalley.org/home/">
                     <img src="https://www.sunsetvalley.org/home/showpublishedimage/1514/638462899020970000" alt="">
                 </a>
                 <p>
-                    I haven't gone out to show people these in person in 13 years, 
-                    and think this will be very fun! You'll know somebody who will 
+                    I haven't gone out to show people these in person in 13 years,
+                    and think this will be very fun! You'll know somebody who will
                     want one of these in your life!
-                    You,ll see! the black light function is so cool. it's too bad I have 
+                    You,ll see! the black light function is so cool. it's too bad I have
                     to do that manually. Anyhow, Fun!
                 </p>
                 <img src="img/mazes/preview/Dog Maze of Summer blacklight example.jpg">
@@ -58,24 +78,24 @@
                 <div class="caption">(April 5 2024 20:06 CST)</div>
                 <h2>Fifth entry -¥-</h2>
                 <p>
-                    Amidst the dusty desert plains, where heatwaves dance like specters in 
-                    the sun, we find ourselves amidst the cacophony of the Mint 400 motorcycle 
-                    race. Motorcycle engines roar like lions in the jungle, their riders clad 
-                    in a mishmash of leather and denim, a motley crew of misfits and rebels. 
-                    Amidst the chaos, the air is thick with the smell of gasoline and sweat, 
-                    a heady cocktail that invades the senses. Zipping past in a blur of motion, 
-                    the motorcycles become streaks of color against the barren landscape. 
-                    Every twist and turn of the track is a gamble with fate, a roll of the 
-                    dice in the game of life. 
+                    Amidst the dusty desert plains, where heatwaves dance like specters in
+                    the sun, we find ourselves amidst the cacophony of the Mint 400 motorcycle
+                    race. Motorcycle engines roar like lions in the jungle, their riders clad
+                    in a mishmash of leather and denim, a motley crew of misfits and rebels.
+                    Amidst the chaos, the air is thick with the smell of gasoline and sweat,
+                    a heady cocktail that invades the senses. Zipping past in a blur of motion,
+                    the motorcycles become streaks of color against the barren landscape.
+                    Every twist and turn of the track is a gamble with fate, a roll of the
+                    dice in the game of life.
                 </p>
                 <img src="img/mazes/preview/Piranha.jpg" alt="Piranha Maze">
                 <p>
-                    Keeping pace with the action, we're swept up 
-                    in the frenzy, our hearts pounding with excitement. In the midst of it 
-                    all, we find ourselves questioning the very fabric of reality, lost in a 
-                    haze of dust and adrenaline. Navigating through the madness, we're reminded 
-                    of the raw, untamed spirit of humanity, a force to be reckoned with. Gazing 
-                    out into the vast expanse of desert, we're struck by the sheer absurdity of 
+                    Keeping pace with the action, we're swept up
+                    in the frenzy, our hearts pounding with excitement. In the midst of it
+                    all, we find ourselves questioning the very fabric of reality, lost in a
+                    haze of dust and adrenaline. Navigating through the madness, we're reminded
+                    of the raw, untamed spirit of humanity, a force to be reckoned with. Gazing
+                    out into the vast expanse of desert, we're struck by the sheer absurdity of
                     it all, a surreal spectacle that defies explanation.
                 </p>
                 <hr />
@@ -108,4 +128,5 @@
         </div>
     </main>
 </body>
+
 </html>
